[package]
name = "tinymd"
version = "0.1.0"
authors = ["jayesh <sharma.jayesh52@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler"
homepage = "https://github.com/jayeshathila"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
